test/inference/good/typeclass_predicate_annotations_priority.mlt
class H 'a { h : 'a -> int }
class H 'a => J 'a { i : 'a -> unit }
let ['a] [H 'a] f = fun x -> h x
