test/inference/bad/typeclass_use.mlt
class H 'a { x : int }
let main = x
